Improved dude-graph-tool style.

--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -45,27 +45,27 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 <div class="layout horizontal">
                     <dude-graph-tool class="flex"
                                      icon="fa fa-play"
-                                     title="Build"
+                                     description="Build"
                                      on-click="_buildGraph">
                     </dude-graph-tool>
                     <dude-graph-tool class="flex"
                                      icon="fa fa-square-o"
-                                     title="Add group"
+                                     description="Add group"
                                      on-click="_showCreateGroup">
                     </dude-graph-tool>
                     <dude-graph-tool class="flex"
                                      icon="fa fa-remove"
-                                     title="Remove selection"
+                                     description="Remove selection"
                                      on-click="_removeSelection">
                     </dude-graph-tool>
                     <dude-graph-tool class="flex"
                                      icon="fa fa-save"
-                                     title="Save"
+                                     description="Save"
                                      on-click="_saveGraph">
                     </dude-graph-tool>
                     <dude-graph-tool class="flex"
                                      icon="fa fa-compress"
-                                     title="Zoom to fit"
+                                     description="Zoom to fit"
                                      on-click="_zoomToFit">
                     </dude-graph-tool>
                 </div>
