--- a/dude-graph-inspector.html
+++ b/dude-graph-inspector.html
@@ -73,6 +73,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             <dude-collapse title="Add Block">
                 <dude-hierarchy
                         items="[[ modelData ]]"
+                        placeholder="Search block to create..."
                         on-dude-hierarchy-item-submit="_createBlockFromModel">
                 </dude-hierarchy>
             </dude-collapse>
