--- a/demo/demo-wrapper.html
+++ b/demo/demo-wrapper.html
@@ -1,6 +1,8 @@
 <!--
 Copyright (c) 2015 DudeTeam. All rights reserved.
 -->
+<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../iron-localstorage/iron-localstorage.html">
 <link rel="import" href="../dude-graph-editor.html">
 <link rel="import" href="../dude-graph-inspector.html">
 <!--
@@ -16,6 +18,16 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         }
     </style>
     <template>
+        <iron-localstorage
+                name="dude-wrapper-graph-data"
+                value="{{ graphData }}"
+                on-iron-localstorage-load-empty="_graphRendererDataEmpty">
+        </iron-localstorage>
+        <iron-localstorage
+                name="dude-wrapper-renderer-data"
+                value="{{ rendererData }}"
+                on-iron-localstorage-load-empty="_graphRendererDataEmpty">
+        </iron-localstorage>
         <div id="wrapper" class="layout horizontal fit">
             <dude-graph-editor id="dudeGraphEditor"
                                class="panel layout horizontal flex-2"
@@ -62,11 +74,24 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             },
 
             /**
-             * Called when the demo-wrapper element is ready
+             * Called when the demo-wrapper element is attached
+             * LocalStorage data needs to be loaded before this gets called
              * @delegate
              */
-            ready: function () {
+            attached: function () {
                 this.$.dudeGraphInspector.dudeGraphEditor = this.$.dudeGraphEditor;
+                this.$.dudeGraphEditor.load();
+                this.$.dudeGraphInspector.load();
+            },
+
+            /**
+             * Called when the graphData and rendererData are empty in localStorage
+             * @delegate
+             * @private
+             */
+            _graphRendererDataEmpty: function () {
+                this.set("graphData", DEMO_SHOOT_BEHAVIOR_GRAPH_DATA);
+                this.set("rendererData", DEMO_SHOOT_BEHAVIOR_RENDERER_DATA);
             },
 
             /**
@@ -80,11 +105,13 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 
             /**
              * Called when the cgRenderer and the cgGraph is saved
+             * Updates the localStorage
              * @param {CustomEvent} e
              * @private
              */
             _dudeGraphInspectorSave: function (e) {
-                console.log("save", e.detail);
+                this.set("graphData", e.detail.graphData);
+                this.set("rendererData", e.detail.rendererData);
             }
         });
     </script>
