--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -189,10 +189,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         },
 
         /**
-         * Called when the DudeGraph element is ready
-         * @delegate
+         * Loads the graph and the renderer
          */
-        ready: function () {
+        load: function () {
             this.graph = new dudeGraph.Graph(this.graphData);
             this.renderer = new dudeGraph.Renderer(this.$.svg, this.graph, this.rendererData);
             _.forEach(this.blockTypes, function (blockType) {
