--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -213,7 +213,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          * @return {Object}
          */
         save: function () {
-            return new dudeGraph.JSONSaver().save(this.renderer, this.graph);
+            return {
+                "rendererData": this.renderer.save(),
+                "graphData": this.graph.save()
+            };
         },
 
         /**
