--- a/dude-graph-tool.html
+++ b/dude-graph-tool.html
@@ -29,7 +29,7 @@
 
             properties: {
                 /**
-                 *
+                 * The tooltip of the tool
                  */
                 description: {
                     type: String,
@@ -37,7 +37,7 @@
                 },
 
                 /**
-                 *
+                 * The icon of the tool
                  */
                 icon: {
                     type: String,
